--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,8 @@
     <color name="snow">#F7F7FA</color>
     <color name="ice">#F0F3F4</color>
     <color name="eastBay">#454F63</color>
-    <color name="grey">#c8c8c8</color>
+    <color name="drab">#324755</color>
+    <color name="grey">#a0a0a0</color>
     <color name="slateGrey">#78849E</color>
     <color name="lightGrey">#FAFAFA</color>
     <color name="bermudaGrey">#6E8CA0</color>
