--- a/app/src/main/res/layout/activity_search_place.xml
+++ b/app/src/main/res/layout/activity_search_place.xml
@@ -253,6 +253,15 @@
         android:layout_height="match_parent"
         android:layout_below="@id/place_search_toggle_container">
 
+        <com.github.ybq.android.spinkit.SpinKitView
+            android:id="@+id/place_search_spinKitView"
+            style="@style/SpinKitView.Wave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="invisible"
+            app:SpinKit_Color="@color/cyan" />
+
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -264,7 +273,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:src="@drawable/ic_not_found"
-                android:visibility="visible"
+                android:visibility="invisible"
                 tools:ignore="ContentDescription" />
 
             <TextView
@@ -277,7 +286,7 @@
                 android:text="검색결과 없음"
                 android:textColor="@color/ice"
                 android:textSize="18sp"
-                android:visibility="visible" />
+                android:visibility="invisible" />
         </RelativeLayout>
 
         <androidx.recyclerview.widget.RecyclerView
