--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#000000</color>
     <color name="snow">#F7F7FA</color>
     <color name="ice">#F0F3F4</color>
+    <color name="tiara">#C8D1D3</color>
     <color name="eastBay">#454F63</color>
     <color name="drab">#324755</color>
     <color name="grey">#a0a0a0</color>
