--- a/app/src/main/res/drawable/btn_add_group_background.xml
+++ b/app/src/main/res/drawable/btn_add_group_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="15dp"/>
-    <solid android:color="@color/sage"/>
-    <stroke android:color="@color/sage"/>
+    <corners android:radius="15dp" />
+    <solid android:color="@color/cyan" />
+    <stroke android:color="@color/cyan" />
 
 </shape>
