--- a/app/src/main/res/layout/member_item.xml
+++ b/app/src/main/res/layout/member_item.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="18.5dp"
         android:layout_toEndOf="@id/member_photo"
         android:fontFamily="@font/mapo_peacefull"
         android:text="유저 이름"
@@ -35,7 +35,7 @@
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="19dp"
         android:layout_toEndOf="@id/member_name"
         android:src="@drawable/ic_master"
         android:visibility="invisible"
@@ -46,11 +46,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/member_name"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="3dp"
         android:layout_toEndOf="@id/member_photo"
         android:fontFamily="@font/bm_hanna"
-        android:text="기능 추가 중..."
+        android:text="불러오는 중..."
         android:textColor="@color/slateGrey"
         android:textSize="13sp" />
 
