--- a/app/src/main/res/drawable/switch_track_on.xml
+++ b/app/src/main/res/drawable/switch_track_on.xml
@@ -7,7 +7,7 @@
         android:width="73dp"
         android:height="28dp" />
 
-    <solid android:color="@color/cyan" />
+    <solid android:color="@color/skyBlue" />
 
     <!--stroke
         android:width="2dp"
