--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -107,7 +107,7 @@
             android:layout_marginStart="10dp"
             android:fontFamily="@font/mapo_peacefull"
             android:text="@string/createAccount"
-            android:textColor="@color/cyan"
+            android:textColor="@color/skyBlue"
             android:textSize="16sp" />
 
     </LinearLayout>
