--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:visibility="visible"
-            app:SpinKit_Color="@color/cyan" />
+            app:SpinKit_Color="@color/skyBlue" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/group_recycler"
