--- a/app/src/main/res/drawable/btn_add_friend_background.xml
+++ b/app/src/main/res/drawable/btn_add_friend_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <corners android:radius="15dp"/>
-    <solid android:color="@color/cyan"/>
-    <stroke android:color="@color/cyan"/>
+    <solid android:color="@color/skyBlue"/>
+    <stroke android:color="@color/skyBlue"/>
 
 </shape>
