--- a/app/src/main/res/layout/activity_select_user.xml
+++ b/app/src/main/res/layout/activity_select_user.xml
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:visibility="invisible"
-            app:SpinKit_Color="@color/cyan" />
+            app:SpinKit_Color="@color/skyBlue" />
 
     </FrameLayout>
 
