--- a/app/src/main/res/layout/custom_progress_dialog.xml
+++ b/app/src/main/res/layout/custom_progress_dialog.xml
@@ -5,7 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    app:SpinKit_Color="@color/cyan">
+    app:SpinKit_Color="@color/skyBlue">
 
     <!--        <ProgressBar
                 android:layout_width="wrap_content"
