--- a/app/src/main/res/layout/fragment_destination.xml
+++ b/app/src/main/res/layout/fragment_destination.xml
@@ -1,13 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/snow">
 
-    <TextView
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/destination_spinKitView"
+        style="@style/SpinKitView.Wave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Destination Fragment" />
+        android:layout_gravity="center"
+        android:visibility="visible"
+        app:SpinKit_Color="@color/skyBlue" />
 
-</RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/no_destination"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="-30dp"
+        android:visibility="invisible"
+        tools:ignore="UselessParent">
+
+        <ImageView
+            android:id="@+id/no_destination_img"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_no_destination"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:id="@+id/no_destination_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/no_destination_img"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/mapo_peacefull"
+            android:text="설정된 목적지 없음"
+            android:textColor="@color/grey"
+            android:textSize="15sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_search_destination"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/no_destination_text"
+            android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="130dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/round_button_skyblue"
+            android:fontFamily="@font/mapo_peacefull"
+            android:text="장소 검색"
+            android:textColor="@color/white"
+            android:visibility="visible" />
+
+    </RelativeLayout>
+
+</FrameLayout>
