--- a/app/src/main/res/layout/fragment_surrounding.xml
+++ b/app/src/main/res/layout/fragment_surrounding.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:visibility="visible"
-            app:SpinKit_Color="@color/cyan"
+            app:SpinKit_Color="@color/skyBlue"
             app:SpinKit_Style="Wave" />
 
         <androidx.recyclerview.widget.RecyclerView
