--- a/app/src/main/res/layout/fragment_destination.xml
+++ b/app/src/main/res/layout/fragment_destination.xml
@@ -60,4 +60,18 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/set_destination"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="목적지 정보 화면" />
+
+    </RelativeLayout>
+
 </FrameLayout>
