--- a/app/src/main/res/layout/activity_place_detail.xml
+++ b/app/src/main/res/layout/activity_place_detail.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".PlaceDetailActivity">
 
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/placeDetail_spinKitView"
+        style="@style/SpinKitView.Wave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="visible"
+        app:SpinKit_Color="@color/skyBlue" />
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/placeDetail_toolbar"
         android:layout_width="match_parent"
@@ -40,7 +49,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/placeDetail_btn_setDestination"
-        android:layout_below="@id/placeDetail_toolbar" />
+        android:layout_below="@id/placeDetail_toolbar"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/placeDetail_btn_setDestination"
@@ -56,6 +66,6 @@
         android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
 </RelativeLayout>
