--- a/app/src/main/res/layout/fragment_destination.xml
+++ b/app/src/main/res/layout/fragment_destination.xml
@@ -66,11 +66,90 @@
         android:layout_height="match_parent"
         android:visibility="invisible">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <WebView
+            android:id="@+id/destination_web_view"
+            android:layout_width="0.5dp"
+            android:layout_height="0.5dp" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/destination_cardView"
+            android:layout_width="350dp"
+            android:layout_height="250dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="21dp"
+            android:elevation="3dp"
+            app:cardCornerRadius="16dp">
+
+            <RelativeLayout
+                android:id="@+id/destination_cardView_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/destination_image"
+                    android:layout_width="350dp"
+                    android:layout_height="170dp"
+                    android:background="@drawable/place_image_background"
+                    android:padding="20dp"
+                    android:src="@drawable/ic_default_place_image"
+                    tools:ignore="ContentDescription" />
+
+                <TextView
+                    android:id="@+id/destination_place_name"
+                    android:layout_width="230dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/destination_image"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="13dp"
+                    android:fontFamily="@font/mapo_peacefull"
+                    android:singleLine="true"
+                    android:text="장소 이름 표시"
+                    android:textColor="@color/darkBlue"
+                    android:textSize="19sp" />
+
+                <TextView
+                    android:id="@+id/destination_place_address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/destination_place_name"
+                    android:layout_marginStart="18dp"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/bm_hanna"
+                    android:text="장소 주소 표시"
+                    android:textColor="@color/slateGrey"
+                    android:textSize="15sp" />
+
+                <ImageView
+                    android:id="@+id/destination_category"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@id/destination_image"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginBottom="13dp"
+                    android:background="@drawable/category_default_image_background"
+                    android:padding="11dp"
+                    android:src="@drawable/ic_category_default"
+                    tools:ignore="ContentDescription" />
+
+            </RelativeLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <Button
+            android:id="@+id/destination_detail_btn"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="목적지 정보 화면" />
+            android:layout_below="@id/destination_cardView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/round_button_skyblue"
+            android:elevation="3dp"
+            android:fontFamily="@font/mapo_peacefull"
+            android:text="상세 정보"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
