--- a/app/src/main/res/drawable/destination_sub_text_background.xml
+++ b/app/src/main/res/drawable/destination_sub_text_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="16dp" />
-    <solid android:color="@color/slateGrey" />
-    <stroke android:color="@color/slateGrey" />
+    <corners android:radius="12dp" />
+    <solid android:color="@color/skyBlue" />
+    <stroke android:color="@color/skyBlue" />
 
 </shape>
