--- a/app/src/main/res/layout/fragment_destination.xml
+++ b/app/src/main/res/layout/fragment_destination.xml
@@ -16,6 +16,36 @@
         app:SpinKit_Color="@color/skyBlue" />
 
     <RelativeLayout
+        android:id="@+id/already_meeting"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="-30dp"
+        android:visibility="gone"
+        tools:ignore="UselessParent">
+
+        <ImageView
+            android:id="@+id/already_meeting_img"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_already_meeting"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:id="@+id/already_meeting_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/already_meeting_img"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/mapo_peacefull"
+            android:text="다른 그룹에서 진행 중입니다."
+            android:textColor="@color/grey"
+            android:textSize="14sp" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/no_destination"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -87,7 +117,7 @@
 
                 <ImageView
                     android:id="@+id/destination_image"
-                    android:layout_width="320dp"
+                    android:layout_width="328dp"
                     android:layout_height="140dp"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="17dp"
@@ -142,7 +172,7 @@
 
                 <TextView
                     android:id="@+id/destination_category"
-                    android:layout_width="170dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/destination_place_address"
                     android:layout_marginStart="15dp"
@@ -163,18 +193,62 @@
 
         </androidx.cardview.widget.CardView>
 
+        <TextView
+            android:id="@+id/destination_member_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/destination_cardView"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="18dp"
+            android:fontFamily="@font/bm_hanna"
+            android:text="참여 중인 멤버"
+            android:textColor="@color/slateGrey"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/destination_member_cardView"
+            android:layout_width="362dp"
+            android:layout_height="290dp"
+            android:layout_below="@id/destination_member_text"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:elevation="4dp"
+            app:cardCornerRadius="16dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/destination_member_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </androidx.cardview.widget.CardView>
+
         <ImageButton
             android:id="@+id/btn_cancel_destination"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="40dp"
+            android:layout_below="@id/destination_member_cardView"
+            android:layout_marginTop="8.5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_toStartOf="@id/btn_gps_tracking"
             android:background="@drawable/btn_cancel_destination_background"
             android:elevation="4dp"
-            android:padding="17dp"
+            android:padding="16dp"
             android:src="@drawable/ic_cancel_large"
+            tools:ignore="ContentDescription" />
+
+        <ImageButton
+            android:id="@+id/btn_gps_tracking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/destination_member_cardView"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="8.5dp"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/btn_gps_tracking_background"
+            android:elevation="4dp"
+            android:padding="16dp"
+            android:src="@drawable/ic_gps_tracking"
             tools:ignore="ContentDescription" />
 
     </RelativeLayout>
