--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="sage">#87BCBF</color>
     <color name="greyishBlue">#E0E2F3</color>
     <color name="darkBlue">#2A2E43</color>
+    <color name="cloudBurst">#353A50</color>
     <color name="dodgerBlue">#3497FD</color>
     <color name="royalBlue">#5773FF</color>
     <color name="slateBlue">#665EFF</color>
