--- a/app/src/main/res/layout/activity_map_view.xml
+++ b/app/src/main/res/layout/activity_map_view.xml
@@ -5,6 +5,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="380dp"
+        android:layout_height="55dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="17dp"
+        android:background="@color/ice"
+        android:elevation="8dp"
+        app:cardCornerRadius="13dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/map_view_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="15.5dp"
+                android:src="@drawable/ic_icon_back_east_bay"
+                tools:ignore="ContentDescription" />
+
+            <View
+                android:id="@+id/select_member_address_view"
+                android:layout_width="1dp"
+                android:layout_height="23dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="16.7dp"
+                android:background="@color/ice" />
+
+            <TextView
+                android:id="@+id/select_member_address"
+                android:layout_width="260dp"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="18dp"
+                android:layout_toEndOf="@id/select_member_address_view"
+                android:fontFamily="@font/mapo_peacefull"
+                android:singleLine="true"
+                android:text="서울시 은평구 녹번동 86-11"
+                android:textAlignment="textStart"
+                android:textColor="@color/eastBay"
+                android:textSize="16sp" />
+
+        </RelativeLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
     <RelativeLayout
         android:id="@+id/map_view"
         android:layout_width="match_parent"
@@ -13,14 +62,14 @@
     <RelativeLayout
         android:id="@+id/select_member_container"
         android:layout_width="match_parent"
-        android:layout_height="115dp"
+        android:layout_height="130dp"
         android:layout_alignParentBottom="true"
         android:background="@drawable/select_member_container_background">
 
         <View
             android:id="@+id/stroke_view"
-            android:layout_width="407dp"
-            android:layout_height="8dp"
+            android:layout_width="405dp"
+            android:layout_height="7dp"
             android:layout_centerHorizontal="true"
             android:background="@drawable/select_member_container_stroke_background" />
 
