--- a/app/src/main/res/layout/friend_item.xml
+++ b/app/src/main/res/layout/friend_item.xml
@@ -9,10 +9,11 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="23dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
         android:background="@drawable/user_image_background"
         android:padding="9.5dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/default_user_photo"
         tools:ignore="ContentDescription" />
 
