--- a/app/src/main/res/layout/select_member_item.xml
+++ b/app/src/main/res/layout/select_member_item.xml
@@ -2,27 +2,28 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="120dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_centerHorizontal="true"
-        app:cardCornerRadius="13dp">
+        android:layout_width="115dp"
+        android:layout_height="110dp"
+        android:layout_marginHorizontal="6dp"
+        android:layout_marginVertical="9dp"
+        app:cardBackgroundColor="@color/cloudBurst"
+        app:cardCornerRadius="15dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/select_member_item_background_cloud_burst">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/select_member_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="7dp"
+                android:layout_marginTop="5dp"
                 android:background="@drawable/select_member_image_background"
                 android:padding="5dp"
                 android:src="@drawable/default_user_photo"
@@ -30,16 +31,43 @@
 
             <TextView
                 android:id="@+id/select_member_name"
-                android:layout_width="wrap_content"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/select_member_image"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="3dp"
-                android:fontFamily="@font/bm_hanna"
+                android:fontFamily="@font/mapo_peacefull"
                 android:text="멤버 이름"
+                android:textAlignment="center"
                 android:textColor="@color/ice"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/select_member_time"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/select_member_name"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="2dp"
+                android:fontFamily="@font/bm_hanna"
+                android:text="35분 소요"
+                android:textAlignment="center"
+                android:textColor="@color/grey"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/select_member_distance"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/select_member_time"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="1dp"
+                android:fontFamily="@font/bm_hanna"
+                android:text="124m"
+                android:textAlignment="center"
+                android:textColor="@color/slateGrey"
+                android:textSize="12sp" />
 
         </RelativeLayout>
 
