--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <color name="lightCyan">#4bbfd0</color>
     <color name="skyBlue">#6BA5F2</color>
     <color name="sage">#87BCBF</color>
-    <color name="greyishBlue">#E0E2F3</color>
+    <color name="greyBlue">#E0E2F3</color>
     <color name="darkBlue">#2A2E43</color>
     <color name="cloudBurst">#353A50</color>
     <color name="dodgerBlue">#3497FD</color>
